crates/fixtures/tests/snapshots/hostile__transformed_rtl.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      79
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "reflected",
    "source": "document"
  },
  "pages": [
    {
      "width": 430080,
      "height": 368640
    }
  ],
  "frames": [
    {
      "name": "reflected",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 0,
        "yx": -65536,
        "xy": -65536,
        "yy": 0,
        "tx": 384000,
        "ty": 215040
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 215040,
        "height": 102400
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 42
          },
          "preview": "אבג The hall turns backwards. דהו A",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 215040,
            "height": 13517
          },
          "baseline": 10707,
          "width": 188901,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 41,
                "end": 42
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 2625
            },
            {
              "range": {
                "start": 40,
                "end": 41
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 2,
              "x": 2625,
              "width": 7479
            },
            {
              "range": {
                "start": 33,
                "end": 40
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 10104,
              "width": 24252
            },
            {
              "range": {
                "start": 31,
                "end": 33
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 34356,
              "width": 6004
            },
            {
              "range": {
                "start": 7,
                "end": 31
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 2,
              "x": 40360,
              "width": 126914
            },
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 167274,
              "width": 24252
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 42,
            "end": 74
          },
          "preview": "mirror keeps the words in order.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 215040,
            "height": 13517
          },
          "baseline": 24224,
          "width": 163729,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 73,
                "end": 74
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 0,
              "width": 3379
            },
            {
              "range": {
                "start": 42,
                "end": 73
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 2,
              "x": 3379,
              "width": 160350
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
