crates/fixtures/tests/snapshots/hostile__unreadable_template.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      64
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "9@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 34
          },
          "preview": "Laid out on the built-in template.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 165101,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 34
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 165101
            }
          ]
        }
      ]
    },
    {
      "node": "47@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 8448,
        "line_height": 10560,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 7
          },
          "preview": "A note.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 112640,
            "height": 10560
          },
          "baseline": 8241,
          "width": 26592,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 8448,
              "level": 0,
              "x": 0,
              "width": 26592
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "63@1",
      "schema": "reprise.follow",
      "owner": "47@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "9@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.template-unreadable",
      "subject": {
        "kind": "document"
      },
      "message": "page template `future` can't be read by this engine; the built-in one is used",
      "bytes": null
    },
    {
      "severity": "info",
      "code": "layout.template-unreadable",
      "subject": {
        "kind": "document"
      },
      "message": "page template `also-future` can't be read by this engine; kept, not used",
      "bytes": null
    }
  ]
}
