crates/fixtures/tests/snapshots/hostile__vertical_rl.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      163
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "vertical",
    "source": "document"
  },
  "pages": [
    {
      "width": 184320,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "vertical",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 0,
        "yx": 65536,
        "xy": -65536,
        "yy": 0,
        "tx": 133120,
        "ty": 25600
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 245760,
        "height": 102400
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 45
          },
          "preview": "The columns descend, one after another, from",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 245760,
            "height": 13517
          },
          "baseline": 10707,
          "width": 232259,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 45
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 234884
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 45,
            "end": 93
          },
          "preview": "the right edge of the page. The house is taller",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 245760,
            "height": 13517
          },
          "baseline": 24224,
          "width": 224568,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 45,
                "end": 93
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 227193
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 93,
            "end": 143
          },
          "preview": "inside than outside. The next column is a step to",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 245760,
            "height": 13517
          },
          "baseline": 37741,
          "width": 241036,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 93,
                "end": 143
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 243661
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 143,
            "end": 152
          },
          "preview": "the left.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 40551
            },
            "width": 245760,
            "height": 13517
          },
          "baseline": 51258,
          "width": 38423,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 143,
                "end": 152
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 38423
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
